--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -66,7 +66,21 @@ jobs:
         python test_runner.py
         TEST_EXIT_CODE=$?
         echo "TEST_EXIT_CODE=$TEST_EXIT_CODE" >> $GITHUB_ENV
-        exit $TEST_EXIT_CODE
+
+        # Если тесты не прошли - workflow должен завершиться с ошибкой
+        if [ $TEST_EXIT_CODE -ne 0 ]; then
+          echo "Tests failed, setting workflow as failed"
+          exit 1
+        fi
+
+        # Дополнительная проверка результатов генерации и линтинга
+        echo "Checking test results..."
+        if [ -f "test_config.json" ]; then
+          echo "Test configuration found, workflow completed successfully"
+        else
+          echo "Test configuration not found, workflow may have issues"
+          exit 1
+        fi
 
     - name: Upload test results
       if: always()
