--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -69,11 +69,10 @@ jobs:
     - name: Generate coverage reports
       run: |
         echo "Generating coverage reports..."
-        coverage combine
-        coverage html -d coverage_html
-        coverage xml -o coverage.xml
-        coverage report -m > coverage.txt
-        coverage json -o coverage.json
+        coverage html -d coverage_html || echo "HTML report generation failed"
+        coverage xml -o coverage.xml || echo "XML report generation failed"
+        coverage report -m > coverage.txt || echo "Text report generation failed"
+        coverage json -o coverage.json || echo "JSON report generation failed"
 
     - name: Run all tests (legacy)
       run: |
@@ -116,6 +115,7 @@ jobs:
           app.py
           .coveragerc
         retention-days: 14
+      continue-on-error: true
 
     - name: Comment PR with test results
       if: github.event_name == 'pull_request'
