--- a/.github/workflows/auto_test.yml
+++ b/.github/workflows/auto_test.yml
@@ -34,8 +34,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests pytest flake8 playwright coverage pytest-cov pytest-mock
-        playwright install chromium
+        pip install requests pytest flake8 coverage pytest-cov pytest-mock
 
     - name: Set up environment
       run: |
